--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: rode-lim <rode-lim@student.42lisboa.com    +#+  +:+       +#+         #
+#    By: rode-lim <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/26 21:55:17 by rode-lim          #+#    #+#              #
-#    Updated: 2024/06/16 11:40:41 by rode-lim         ###   ########.fr        #
+#    Updated: 2023/07/26 21:55:24 by rode-lim         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
